# jtbd-chat-dspy-v2

./: .env.example  .gitignore  AGENT.md  CLAUDE.md  UX_SPECIFICATION.md  database.py  embedding_demo.py  embeddings.py  jest.config.js  jest.setup.js  llm_wrapper.py  package-lock.json  package.json  pyproject.toml  test_embeddings.py  tsconfig.tsbuildinfo
.claude/commands/: next-task.md
.claude/skills/: code-review.md
.kiro/docs/: README.md  task-8.1-plan.md
.next/: app-build-manifest.json  build-manifest.json  prerender-manifest.json  trace
.next/cache/: .rscinfo
.next/server/: app-paths-manifest.json  middleware-build-manifest.js  server-reference-manifest.json
app/: main.py  main_optimized.py
app/core/: __init__.py  constants.py  database.py  embeddings.py  exceptions.py  llm_wrapper.py  prompts.py
app/pages/: __init__.py  chat.py  chat_optimized.py  insights.py  jtbds.py  metrics.py  metrics_optimized.py
app/services/: README.md  __init__.py  chat_service.py  context_manager.py  conversation_service.py  data_service.py  initialization.py  jtbd_service.py  metric_service.py  search_service.py
app/ui/: README.md
app/utils/: text_utils.py
docs/reference/: architecture.md  (+8 more)
dspy-service/: README.md  config.py  main.py  requirements.txt  test_setup.py  validate_core.py
scripts/: demo_complete_workflow.py  embedding_demo.py  end_to_end_integration_test.py  final_integration_validation.py  test_task4_implementation.py  verify_services_integration.py
supabase/: config.toml
tests/: test_chat_interface.py  test_embeddings.py  test_services.py
(+184 files in other folders)
